--- a/FiberCool/FiberCool.vcxproj
+++ b/FiberCool/FiberCool.vcxproj
@@ -146,7 +146,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Fiber.cpp" />
+    <ClCompile Include="FiberCool.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Fiber.h" />
+    <ClInclude Include="FiberCool.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
