update swatch but not finished

--- a/FiberCool/FiberCool.vcxproj
+++ b/FiberCool/FiberCool.vcxproj
@@ -147,13 +147,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Fiber.cpp" />
-    <ClCompile Include="FiberCool.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Fiber.h" />
-    <ClInclude Include="FiberCool.h" />
+    <ClInclude Include="FiberCool.hpp" />
     <ClInclude Include="Thread.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
