--- a/FiberCool/FiberCool.vcxproj.filters
+++ b/FiberCool/FiberCool.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="FiberCool.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Fiber.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -29,13 +26,13 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FiberCool.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="Fiber.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="Thread.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FiberCool.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
